# venra

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-pypi.yml  python-publish.yml
examples/: example-query-and-embedding.py  example-query-feed.py  example-visit-and-clf.py  example-visit-feed.py
tests/functional/: run_all_tests.py  test_client.py  test_config.py  test_document.py  test_ops.py  test_query.py  test_search.py  test_system.py  test_true.py  test_visit.py
tests/unit/: run_all_tests.py  test_client.py  test_config.py  test_ops.py  test_system.py
venra/: __init__.py  client.py  config.py  document.py  exceptions.py  ops.py  query.py  search.py  system.py  visit.py
