[project]
name = "venra"
version = "0.1.7"
description = 'Venra provides a simple, high-level api for vespa.ai.',
authors = [
    { name = "Cody Collier", email = "cmcollier@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'information retrieval',
    'machine learning',
    'search',
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

dependencies = [
    'requests',
]

[project.urls]
Homepage = "https://pypi.org/project/venra/"
Repository = "https://github.com/codycollier/venra"

[project.optional-dependencies]
examples = [
]

test = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "venra",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["venra"]


